# calcualtor-dz-2.0

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  main.cpp
src/: Calculator.cpp  Calculator.hpp  Logger.cpp  Logger.hpp  Parser.cpp  Parser.hpp  Printer.cpp  Printer.hpp  Runner.cpp  Runner.hpp  main.cpp
tests/: test_calculator.cpp
